"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-03-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-27:
	  SIM::state_base: implemented a 2-entry LRU hot-cache for
		global footrint frames, that falls back to using
		the tree cache.  Reason: high locality and frequent
		immediate re-use of most recent frame, by pid.
		Results in only a little speed-up, but still helpful.
		Not accounted in memory usage, too small.


2010-03-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-26:
	  hacprsim: now automatically shrinks/ages cache per half-life
		period, defaulting to 1024 events.
		Added commands to dump and manage the frame-cache.
		Documented.


	* HACKT-00-01-04-main-00-83-53-scalable-01-25:
	  hacprsim was unacceptably slow (5x) with new scalability
		re-work, due to huge number of lookups to global
		footprint-frames for bool-id translation.
		Implemented tree-cache to maintain hierarchical cache
		of global process footprint-frames.  
		Gained most of lost performance back!!!
		In test/lib: make check (hacprsim-only) is 25% slower 
			than before, the non-scalable version.
	  TODO: cache currently only grows, never shrinks.
		Institute some half-life decay policy to gradually
		evict stale cache items.
		Dump memory usage statistics of cache in SIM::state_base.


2010-03-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-24:
	  No source revision.
		Re-enabled prsimexpr dump tests, update tests b/c
		top-footprint no longer carries dummy node at index [0].
	  VPI tests work.  Graph-dump re-enabled.
	  Next: chpsim or guile


2010-03-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-23:
	  Finally satisfied with hacprsim progress!